# k3d-demo.py.adligo.org

./: .classpath  .gitignore  .project  README.md  grafana-values.yaml  hdfs-values.yaml  istio-gateway-values.yaml  istio-routes.yaml  istiod-values.yaml  kafka-values.yaml  kiali-values.yaml  prometheus-values.yaml  pyproject.toml  upload_math_images.py
docs/: CONFIG_DETAILS.md  GRAFANA_USAGE.md  ISTIO_USAGE.md  PROMETHEUS_USAGE.md  TEARDOWN_NOTES.md  TROUBLESHOOTING.md  UBUNTU_VBOX_SETUP_NOTES.md  WINDOWS_SETUP_NOTES.md
helm-charts/: HELM_README.md
helm-charts/grafana/: Chart.yaml
helm-charts/hadoop/: values.yaml
helm-charts/kiali-server/: Chart.yaml  values.yaml
src/: label_alignment.py  math_ocr.py  segment_tree.py  segmentation.py  synthesis.py  upload_math_images.py
src/tex/: bayes.tex  compoundInterest.tex  distance2d.tex  distance3d.tex  einstein.tex  eulersIdentity.tex  imaginaryUnit.tex  lawOfSins.tex  normalDistribution.tex  pythagoras.tex  quadraticFormula.tex
